# rust_qt_gui_paddle_ocr_example

./: .gitignore  Cargo.toml  README.en.md  README.md  build.rs  sqlite3.db
.github/workflows/: rust.yml
PaddleOCR-json/: notes-english.txt  说明.txt
src/: filemd5.rs  main.rs  mainwindow.ui  ocr.rs  pdf.rs  sqlops.rs  uic.rs  winhelloworld.rs
